# django_pg_real_pool

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: mkdocs.yml
docs/docs/: compatibility.md  configuration.md  faq.md  how-it-works.md  index.md  installation.md
examples/: settings_dj_db_conn_pool.py  settings_native.py
src/django_pg_real_pool/: __init__.py  _release.py  base.py
src/django_pg_real_pool/dj_db_conn_pool/: base.py
src/django_pg_real_pool/native/: base.py
tests/: conftest.py  settings.py  test_django_pg_real_pool.py  test_engines.py
