[build-system]
# uv_build is pre-1.0; minor bumps may break, so cap at the next minor per uv's own guidance.
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "django-pg-real-pool"
version = "1.0.0"
description = "Django PostgreSQL backend that releases pooled connections As Soon As Possible"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "spumer", email = "9034262+spumer@users.noreply.github.com" }]
requires-python = ">=3.10"
keywords = ["django", "postgresql", "psycopg", "connection-pool", "pool", "pgbouncer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    # Native pool is the default engine; it needs Django 5.1+ and psycopg 3 with the pool extra.
    "django>=5.1",
    "psycopg[pool]>=3.1.8",
]

[project.optional-dependencies]
# Third-party SQLAlchemy-QueuePool backend (ENGINE = 'django_pg_real_pool.dj_db_conn_pool').
# Opt-in: brings SQLAlchemy + sqlparams as transitive deps and works on Django < 5.1.
dj-db-conn-pool = ["django-db-connection-pool>=1.2.6"]

[project.urls]
Repository = "https://github.com/spumer/django-pg-real-pool"
Issues = "https://github.com/spumer/django-pg-real-pool/issues"
Changelog = "https://github.com/spumer/django-pg-real-pool/blob/master/CHANGELOG.md"

[dependency-groups]
# PEP 735 dev dependencies (not published). Installed by `uv sync`.
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-clarity>=1.0.1",
    "coverage[toml]>=7.4",
    "mypy>=1.9",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "commitizen>=3.27",
    "tox>=4.15",
    "tox-uv>=1.9",
    # Installed so the third-party backend can be exercised locally without the extra.
    "django-db-connection-pool>=1.2.6",
]
docs = [
    "mkdocs-material>=9.5",
]

[tool.uv]
# Keep the dev group in sync by default.
default-groups = ["dev"]

[tool.commitizen]
bump_message = "bump(release): v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "pep621"
version_files = ["src/django_pg_real_pool/__init__.py:__version__"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "--color=yes --verbosity=2 --strict-markers"
xfail_strict = true
markers = [
    "native: tests meaningful only for the native pool backend",
    "dj_db_conn_pool: tests meaningful only for the third-party pool backend",
]

[tool.coverage.run]
branch = true
source = ["django_pg_real_pool"]
data_file = "reports/.coverage"

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true

[tool.ruff]
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "C4", "C90", "D", "DTZ", "E", "F", "FLY", "I", "LOG", "N", "PERF", "PGH", "PIE", "PL", "PT", "Q", "RET", "RUF", "RSE", "SIM", "TID", "UP", "W", "YTT"]
ignore = [
    "D203", "D213", "E501", "PGH003", "RET504", "S101",
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
]
unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
# Lazy/in-test imports are intentional here: the conftest pool fixture imports the
# optional third-party package only when that backend is active, and test_engines
# imports submodules inside the tests that exercise them.
"tests/*" = ["D100", "D101", "D102", "D103", "PLR2004", "PT004", "PLC0415", "SIM117"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"
